exports[`(.not).toHaveCreatedStatus > using axios > .not.toHaveCreatedStatus > fails when response have status code 201 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveCreatedStatus()</intensity>

Expected status code to not be 201 received:
  <red>201</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 201,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveCreatedStatus > using axios > .toHaveCreatedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveCreatedStatus()</intensity>

Expected status code to be 201 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
